# water

./: .gitignore  instructions.md  pyproject.toml
cookbook/: agno_flow.py  branched_flow.py  loop_flow.py  parallel_flow.py  playground.py  sequential_flow.py  weather_flow.py
tests/: __init__.py
water/: __init__.py  config.py  context.py  execution_engine.py  flow.py  server.py  task.py  types.py
